Fix planet width distorted

--- a/src/assets/styles/Checkpoint.css
+++ b/src/assets/styles/Checkpoint.css
@@ -105,6 +105,7 @@
     flex-direction: column;
     gap: 10px;
     margin: 40px;
+    align-items: center;
 }
 
 @keyframes planet-focus {
@@ -119,6 +120,7 @@
 
 .checkpoint .planets-container .planet {
     height: 150px;
+    width: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
